--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@
                         <img class = "img" src="baby5.jpg">
                     </figure>
                 </div>
-                <div >
-                    <video id = "video" preload="auto" autoplay loop muted="muted" volume ="0" controls>
-                        <source src="" type="video/mp4">
-                    </video>
-                </div>
             </ul>
 
 
@@ -119,24 +114,20 @@
         </div>
 
         <div class="main-container">
-
+       
             <div id="promo">
-                <video autoplay muted loop poster="poster.jpg" id="background-video">
-                <source src="demo.webm" type="video/webm" >
-                <source src="demo.mp4" type="video/mp4" >
-                <!-- Add more <source> tags for different video formats -->
-                Your browser does not support the video tag.
-                </video>
-               <div id="welcomeImg">
-                </div>
+                 <a href="https://brokenkingdomgame.com">
+                <div class="text-overlay">Broken Kingdom</div>
+                </a>
             </div>
-            <div id="baby" class="baby">
+           
+            <div id="baby" class="baby, games">
                 <p>Feathery Fury</p>
             </div>
-            <div id="snake" class="snake">
+            <div id="snake" class="snake, games">
                 <p>Snakr</p>
             </div>
-            <div id="box" class="box">
+            <div id="box" class="box, games">
                 <p>Box Blaster</p>
             </div>
 
