Small change on the top menu

--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
         </div>
     </head>
 
-
-
     <body>
-        <div class="menu hidden">
+        <div class="menu-hidden">
             
             <div id="menu-list">
-                <div class="title">
-                    <img src="ZomigamesTitleLogo.png" onload="Ï">
-                    
-                </div>
-                <div id="logo">
+                <div>
+                 <div id="logo">
                     <img src="ZomiGamesLogoNoShadow.png" onload="ImageReady()">
                  </div>
+                <div>
+                    <p>ZomiGames</p>
+                </div>
+                </div>
                 <div id="download">
                     <img src="DownloadIcon.png" onload="ImageReady()">
                 </div>
