Restored old index.html file

--- a/hittheboxpp.html
+++ b/hittheboxpp.html
@@ -2,8 +2,8 @@
 <html>
 
 <h2>
-Box Blaster Policy
+Hit The Box ! Policy
 </h2>
-<p>Box Blaster doesn't collect or store any personal information</p>
+<p>Hit The Box ! doesn't collect or store any personal information</p>
 
 </html>
