Changed promo igame, changed external link to bk

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="main-container">
 
             <div id="promo">
-                <video autoplay muted loop webkit-playsinline playsinline poster="BKFeatureImage.jpg" id="background-video">
+                <video autoplay muted loop webkit-playsinline playsinline poster="bk_promo_image.jpg" id="background-video">
                 <source src="demo.webm" type="video/webm" >
                 <source src="demo.mp4" type="video/mp4" >
                 <!-- Add more <source> tags for different video formats -->
